Fixed weird padding on music button to dynamically change on smaller devices to bigger ones.

--- a/CSS/SantaStyle.css
+++ b/CSS/SantaStyle.css
@@ -337,3 +337,15 @@
         font-size: 69px;
     }
 }
+
+@media (max-width: 760px) {
+    .music_player {
+        padding-bottom: 12%;
+    }
+}
+
+@media (min-width: 761px) {
+    .music_player {
+        padding-bottom: 3%;
+    }
+}
